# oauth2-proxy-test

./: .gitignore  Dockerfile  README.md  authenticated-emails  docker-compose.yaml  my.env  pyproject.toml
tests/: test_dummy_app.py
