[tool.poetry]
name = "dummy-app"
version = "0.1.0"
description = ""
authors = ["Niko <n.p.ahonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
black = "^21.9b0"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
